infrastructure/k8s/email-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
        - name: email-service
          image: jabrego/email-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "250Mi"
              cpu: "150m"
            limits:
              memory: "300Mi"
              cpu: "2000m"
---

apiVersion: v1
kind: Service
metadata:
  name: email-service
  labels:
    app: email-service
spec:
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: email-service
