infrastructure/k8s/subscription-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscription-service
  template:
    metadata:
      labels:
        app: subscription-service
    spec:
      containers:
        - name: subscription-service
          image: jabrego/subscription-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "250Mi"
              cpu: "150m"
            limits:
              memory: "300Mi"
              cpu: "2000m"
---

apiVersion: v1
kind: Service
metadata:
  name: subscription-service
  labels:
    app: subscription-service
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: subscription-service
